--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "private": false,
   "name": "vue-alphanav",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Alphabetical Navigation bar displayed using flexbox.",
   "main": "./dist/index.js",
+  "repository": "git://github.com/xavsio4/vue-alphanav.git",
   "scripts": {
     "dev": "vue serve Alphanav.vue",
     "build": "bili --name index --plugin vue --vue.css false"
