--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "private": false,
   "name": "vue-alphanav",
-  "version": "1.0.6",
+  "version": "1.0.9",
   "description": "Alphabetical Navigation bar displayed using flexbox.",
   "main": "./dist/index.js",
   "repository": "git://github.com/xavsio4/vue-alphanav.git",
   "scripts": {
-    "dev": "vue serve Alphanav.vue",
-    "build": "bili --name index --plugin vue --vue.css false"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "build:npm": "vue-cli-service build --target lib --name Alphanav ./src/Alphanav.vue"
   },
   "keywords": [
     "vuejs",
@@ -19,7 +20,7 @@
   "files": [
     "dist/*"
   ],
-  "devDependencies": {
+  "dependencies": {
     "bili": "^4.8.1",
     "rollup-plugin-vue": "^5.1.2",
     "vue-template-compiler": "^2.6.10"
