--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "registry": "http://registry.npmjs.org/"
   },
   "name": "vue-alphanav",
-  "version": "1.1.7",
+  "version": "1.1.14",
   "description": "Alphabetical Navigation bar displayed using flexbox.",
   "main": "dist/vue-alphanav.umd.js",
   "unpkg": "dist/vue-alphanav.umd.min.js",
@@ -16,8 +16,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "postpublish": "npm publish --ignore-scripts --@xavsio4:registry='http://registry.npmjs.org'",
-    "build-bundle": "vue-cli-service build --target lib --name vue-alphanav ./src/Alphanav.vue",
-    "build:npm": "vue-cli-service build --target lib --name vue-alphanav ./src/Alphanav.vue"
+    "build-bundle": "vue-cli-service build --target lib --name vue-alphanav ./src/components/Alphanav.vue",
+    "build-compo": "vue-cli-service build --target wc --name vue-alphanav ./src/components/Alphanav.vue"
   },
   "keywords": [
     "vuejs",
@@ -33,19 +33,36 @@
   "files": [
     "dist/*"
   ],
-  "dependencies": {
-    "acorn": "^7.1.0",
-    "core-js": "^3.3.2",
-    "vue": "^2.6.10"
-  },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
     "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
-  }
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "rules": {},
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
